# LogicGatesEngine

./: CMakeLists.txt  README.md
docs/: design.md  scene-format.md
engine/core/: scheduler.cpp  scheduler.hpp  serialization.cpp  serialization.hpp  types.cpp  types.hpp  world.cpp  world.hpp
engine/geom/: collision_ccd.cpp  collision_ccd.hpp
engine/logic/: emitters.cpp  emitters.hpp  gate.cpp  gate.hpp  truth_table_rule.cpp  truth_table_rule.hpp
engine/sim/: determinism.cpp  determinism.hpp  integrate.cpp  integrate.hpp  predict.cpp  predict.hpp  process.cpp  process.hpp
examples/: nand_demo.json
tests/: test_scheduler.cpp  test_toi.cpp  test_truth_table.cpp
viewer/: input.cpp  input.hpp  main.cpp  renderer.cpp  renderer.hpp
